Set up arguments for new tests